style.css
/* GLOBAL */
* {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
    user-select: none;
}


body {
    font-family: "Montserrat", sans-serif;
    line-height: 1.7;
    color: var(--color-font);
    background: var(--color-bg);
}

section {
    padding: 3rem 0;
}

section h2 {
    text-align: center;
    margin-bottom: 4rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    line-height: 1.2;
}

h1 {
    font-size: 2.4rem;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.6rem;
}

h4 {
    font-size: 1.3rem;
}

a {
    color: var(--color-font);
}

img {
    width: 100%;
    display: block;
    object-fit: cover;
}

::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    border-radius: 5px;
    background-color: #F5F5F5;
}

::-webkit-scrollbar {
    width: 8px;
    background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb {
    border-radius: 5px;
    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
    background-color: #555;
}

/* ================== CONFIG ================== */

:root {
    /* COLORS */
    --color-primary: rgb(255, 105, 0);
    --color-primary-dark: rgb(240, 100, 0);
    --color-success: #00bf8e;
    --color-warning: #f7c94b;
    --color-danger: #f54242;
    --color-danger-variant: rgba(247, 88, 66, 0.4);
    --color-white: #fff;
    --color-gray: rgb(226, 226, 233);
    --color-gray-dark: rgb(202, 202, 202);
    --color-light: rgba(255, 255, 255, 0.7);
    --color-black: #000;
    --color-text-gray: #888;
    --color-bg: #f9f9f9;
    --color-paper: #fff;
    --color-font: #000;
    /* CONTAINER WIDTH */
    --container-width-lg: 76%;
    --container-width-md: 90%;
    --container-width-sm: 94%;
    /* OTHER */
    --transition: all 400ms ease;
    --border-radius: 15px;
    --box-shadow: rgba(184, 184, 184, 0.459) 0px 2px 8px 0px;
    --padding: .8rem 1.4rem;
}



.container {
    width: var(--container-width-lg);
    margin: 0 auto;
}

.btn-primary {
    background: var(--color-primary);
    color: var(--color-white);
    padding: var(--padding);
    border-radius: var(--border-radius);
    cursor: pointer;
    transition: var(--transition);
}

.btn-primary:hover {
    background: var(--color-primary-dark);
}

.d-flex-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.hide {
    display: none;
}

@media (max-width: 768px) {
    .container {
        width: var(--container-width-sm);
    }
}



/* ================== HEADER ================== */
header {
    height: 5rem;
    background: var(--color-paper);
    box-shadow: var(--box-shadow);
}

.header__info {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
}


.header__info a,
header p,
.header-cart__button {
    font-weight: 500;
    transition: var(--transition);
}

.header__info a:hover {
    color: var(--color-primary);
}

.header__container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.header__logo {
    max-width: 10rem;
    max-height: 4rem;
}

.header-cart {
    position: relative;
}

.header-cart__body {
    width: 20rem;
    position: absolute;
    right: 0;
    margin-top: 1rem;
    border-radius: var(--border-radius);
    background-color: var(--color-paper);
    box-shadow: var(--box-shadow);
    z-index: 2;
    padding: 1rem;
}

.header-cart__body button.btn-primary {
    width: 100%;
    font-weight: 700;
    margin-top: 1rem;
}

.header-cart__prices div {
    margin-top: .6rem;
    display: flex;
    justify-content: space-between;
    color: var(--color-text-gray);
}

.header-cart__prices div:last-child {
    color: var(--color-font);
    font-weight: 600;
}

/* ================== NAVBAR ================== */
nav {
    height: 4rem;
}

.nav__container {
    height: 100%;
    display: flex;
    align-items: center;
}

.nav__container ul {
    display: flex;
    gap: 2rem;
    height: 100%;
    align-items: center;
    overflow-x: auto;
}

.nav__container ul a {
    font-size: 1.2rm;
    transition: var(--transition);
    border-bottom: 1px dashed var(--color-black);
}

.nav__container ul a.active {
    color: var(--color-primary);
    border-bottom: 1px dashed var(--color-primary);
}


.nav__container ul a:hover {
    color: var(--color-primary);

}

/* @media (max-width: 768px) {} */

/* ================== MAIN ================== */
main h2 {
    text-align: left;
}

.card-wrapper {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 1.1rem;
}

.card {
    background: var(--color-paper);
    padding: 1.4rem;
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow);
}

.card__img {
    transition: var(--transition);
    height: 14rem;
    border-radius: var(--border-radius);
}

.card:hover img {
    /* transform: rotate(5deg); */
    transform: scale(1.02)
}

.card__title,
.card__description {
    margin-top: .7rem;
}

.card__description {
    font-size: .9rem;
}

.card__bottom {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.1rem;
    margin-top: 1.4rem;
}

.card__price {
    font-weight: 500;
}

@media (max-width: 1536px) {
    .card-wrapper {
        grid-template-columns: repeat(3, 1fr);
    }
}

@media (max-width: 992px) {
    .card-wrapper {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 768px) {
    .card-wrapper {
        grid-template-columns: 1fr;
    }
}



/* PRODUCT-MODAL */
.product-modal {
    background: rgba(0, 0, 0, 0.6);
    position: fixed;
    width: 100vw;
    height: 100vh;
    top: 0;
    left: 0;
    z-index: 3;

}

.product-modal__body {
    position: fixed;
    top: 7vh;
    width: 30vw;
    left: 35vw;
    padding: 2rem;
    padding-top: 3rem;
    background: var(--color-white);
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow);
}

.product-modal__close {
    content: "";
    position: absolute;
    width: 2rem;
    height: 2rem;
    right: .6rem;
    top: .6rem;
    background: url('./assets/images/close.svg') no-repeat;
    background-size: 100%;
    cursor: pointer;

}

.product-modal__size {
    display: flex;
    gap: 1rem;
    flex-wrap: wrap;
}

.product-modal__size span {
    padding: .3rem .8rem;
    border-radius: var(--border-radius);
    background-color: var(--color-gray);
    cursor: pointer;
    font-size: .9rem;
    box-shadow: var(--box-shadow);
}

.product-modal__size span.active {
    background: var(--color-gray-dark);
    color: var(--color-white);
    cursor: default;
}

.product-modal__size span:hover {
    transition: var(--transition);
    background: var(--color-gray-dark);
}

.product-modal__button.btn-primary {
    margin-top: 1.4rem;
    font-weight: 700;
    width: 100%;
}

.product-modal__title,
.product-modal__description,
.product-modal__size {
    margin-top: .7rem;
}

footer {
    background-color: var(--color-paper);
    border-top: 2px solid --color-primary;
}

.footer__bottom {
    padding: 1rem;
    text-align: center;
    font-size: .8rem;
}

.footer__bottom a {
    color: var(--color-primary);

}

